[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
seaborn = "^0.13.2"
plotly = "^5.24.1"
pytz = "^2024.2"
timezonefinder = "^6.5.7"
tzlocal = "^5.2"
folium = "^0.19.4"
streamlit-folium = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
